# predictability-dimension

./: .gitignore  Dimension_vs_CRPS_horizons.ipynb  HANDOFF_CLAUDE.md  README.md  TIGGEspread_dim.ipynb  environment.yml  pyproject.toml
.handoff/: git-status.txt  recent-commits.txt
data/: TIGGEspread.nc  analogue_spread_density.nc  dim.nc  dim_raw_era5_2deg.nc
notebooks/legacy/: Dimension_vs_CRPS_horizons_legacy_pca.ipynb
notebooks/results/: Raw_ERA5_dimension_TIGGE_display.ipynb
scripts/: compare_tigge_spread.py  compute_analogue_spread.py  compute_raw_dimension.py  regression_dimension_spread.py  scatter_tigge_growth_vs_crps_skill.py  scatter_tigge_vs_analogue_spread.py
src/predictability_dimension/: __init__.py  analogues.py  config.py  dimension.py  fields.py  plotting.py  preprocess.py  regression.py  scores.py
src/predictability_dimension.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/predictability_dimension/cli/: compare_tigge_spread.py  compute_raw_dimension.py
utils/: CRPS.py  analogues_functions.py  dimension_functions.py  preprocess.py
utils/.ipynb_checkpoints/: CRPS-checkpoint.py  CRPS_clim-checkpoint.ipynb  analogues_functions-checkpoint.py  preprocess-checkpoint.py
