[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictability-dimension"
version = "0.1.0"
description = "Readable workflows to compare local attractor dimension and atmospheric predictability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "xarray>=2024.1",
  "netcdf4>=1.6",
  "h5netcdf>=1.3",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "scikit-dimension>=0.3",
  "matplotlib>=3.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel",
  "jupyterlab",
  "nbstripout",
]

[project.scripts]
compute-raw-dimension = "predictability_dimension.cli.compute_raw_dimension:main"
compare-tigge-spread = "predictability_dimension.cli.compare_tigge_spread:main"

[tool.setuptools.packages.find]
where = ["src"]

